workspaces/DC Dev/DC Dev/src/objects/UFHT__View_Field_History_Date_Filters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>UFHT__Month_Week_Day_Filter_Category__c</fullName>
        <label>Month/Week/Day Filter Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UFHT__Sr_No__c</fullName>
        <label>Sr. No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UFHT__Value__c</fullName>
        <label>Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>View Field History Date Filters</label>
</CustomObject>